--- a/app/index.html
+++ b/app/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang="de"><head><meta charset="utf-8"></head><body id="app"><router-view v-bind:available-routes="availableRoutes"></router-view><script src="index.js"></script></body></html>
+<!DOCTYPE html><html lang="de"><head><meta charset="utf-8"></head><body id="app"><router-view v-bind:available-routes="availableRoutes"></router-view><script src="out/index.js"></script></body></html>
